v1.1.0a38 - Fixed legend being hidden under social buttons

--- a/a/index.css
+++ b/a/index.css
@@ -143,7 +143,7 @@ a { color: white; text-decoration: underline; cursor: pointer;}
 #legend {
 	width: 360px;
 	position: absolute;
-	bottom: 0px;
+	bottom: 30px;
 	left: 0px;
 }
 @media screen and (max-height: 340px) { #mapDiv { zoom: 55%; } }
